[package]
name = "pprof-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "54.1"
arrow-array = "54.1"
arrow-schema = "54.1"
env_logger = "~0.10"
lance = "0.25.0"
lance-arrow = "0.25.0"
lance-index = "0.25.0"
lance-linalg = "0.25.0"
lance-io = "0.25.0"
lancedb = "=0.18.2"
object_store = "0.11.0"
parking_lot = "0.12"
pprof = { path = "../pprof-rs", features = ["protobuf-codec"]}
pprof_object_store = { path = "../pprof-object-store" }
rand = "0.8"
tokio = { version = "1", features = ["full"] }